--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 /* index.css */
 
 #root {
- border: 3px solid red;
+
  width: 100%;
+ margin: 0  !important;
+ padding: 0 !important;
 }
 
 /* @font-face {
@@ -14,6 +16,7 @@
 
 html,
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0  !important;
+  padding: 0 !important;
+ 
 }
