--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,32 +1,43 @@
 .header-container {
-    max-width: 100% !important;
-  padding: 10px 40px;
-  border-bottom: 2px solid gray;
+  max-width: 100vw !important;
+  /* padding: 10px 40px; */
  
+  border: 2px solid gray;
 
-
-  .items-cart{
+  .items-cart {
     display: flex;
     align-items: center;
-
     justify-content: space-between;
-    .logo-header {
-        img {
-          height: 80px;
-        }
-      }
-    
-      .items-header {
-        display: flex;
-        gap: 20px;
-    
-        a {
-          text-decoration: none;
-          color: black;
-        }
-      }
+    padding: 5px 20px;
 
+    .logo-header {
+      display: flex;
+      align-items: center;
+ 
+      img {
+        height: 80px;
+        width: 90px;
+      }
+    }
+
+    .items-header {
+      display: flex;
+      justify-content: end;
+      align-items: center;
+      gap: 20px;
+
+
+      a {
+        text-decoration: none;
+        color: black;
+      }
+    }
   }
 
- 
+  .filter-input {
+    display: flex;
+    justify-content: center;
+    background-color:#0039B1 ;
+
+  }
 }
