--- a/src/components/ProductsCard/ProductsCard.css
+++ b/src/components/ProductsCard/ProductsCard.css
@@ -1,40 +1,54 @@
+.container-products-card {
 
+padding: 20px 0;
 
-.container-products-card{
- 
-.image-container {
+  .container-carrousell {
     width: 100%;
-    height: 24rem; /* 96 * 0.25rem (tailwind) */
-    cursor: pointer;
-    overflow: hidden;
-  }
-  
-  .image-container img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    transition: transform 0.5s ease-in-out;
-  }
-  
-  .image-container:hover img {
-    transform: scale(1.1);
-  }
+    max-width: 92vw;
+    border: 2px solid rgb(229, 255, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  .category-price{
+    .carrousell {
+      border: 2px solid red;
+      width: 90%;
+    }
+
+    .image-slick {
+      border: 2px solid blue;
+      height: 220px;
+      width: 100%;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .image-slick:hover {
+      transform: scale(1.1);
+    }
+
+    .slick-dots li button:before {
+      color: rgb(121, 117, 117) !important; /* Color de los puntos inactivos */
+      opacity: 1 !important; /* Asegura que siempre sea visible */
+      font-size: 7px; /* Opcional: ajusta el tamaño */
+    }
+
+    .slick-dots li.slick-active button:before {
+      color: #0039b1 !important;
+    }
+  }
+  .category-price {
     display: flex;
     justify-content: space-between;
-    .container-price{
+    .container-price {
       display: flex;
       border: 2px solid red;
-      gap:10px;
-      .old-price{
+      gap: 10px;
+      .old-price {
         text-decoration: line-through;
         color: gray;
-
       }
-      .price{
+      .price {
         color: black;
-
       }
     }
   }
