--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -9,12 +9,45 @@
     justify-content: center;
   }
 
-  .image-cart {
-    max-width: 150px;
-    max-height: 150px;
-    /*    width: 70%;
-    height: 80%; */
+
+  
+  .container-carrousell {
+    width: 100%;
+    max-width: 180px;
+    max-height: 130px;
+    border: 2px solid rgb(229, 255, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .carrousell {
+      border: 2px solid red;
+      width: 90%;
+    }
+
+    .image-slick {
+      border: 2px solid blue;
+      height: 130px;
+      width: 100%;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .image-slick:hover {
+      transform: scale(1.1);
+    }
+
+    .slick-dots li button:before {
+      color: rgb(121, 117, 117) !important; /* Color de los puntos inactivos */
+      opacity: 1 !important; /* Asegura que siempre sea visible */
+      font-size: 7px; /* Opcional: ajusta el tamaño */
+    }
+
+    .slick-dots li.slick-active button:before {
+      color: #0039b1 !important;
+    }
   }
+
+
 
   .title-product {
     display: flex;
