--- a/src/components/InputSearch/InputSearch.css
+++ b/src/components/InputSearch/InputSearch.css
@@ -1,10 +1,12 @@
-.MuiAutocomplete-hasPopupIcon.css-1tlcqt-MuiAutocomplete-root .MuiOutlinedInput-root, .MuiAutocomplete-hasClearIcon.css-1tlcqt-MuiAutocomplete-root .MuiOutlinedInput-root {
+.MuiAutocomplete-hasPopupIcon.css-1tlcqt-MuiAutocomplete-root
+  .MuiOutlinedInput-root,
+.MuiAutocomplete-hasClearIcon.css-1tlcqt-MuiAutocomplete-root
+  .MuiOutlinedInput-root {
   padding-right: 10px !important;
 }
 
 .container {
   position: relative;
-  
 
   @media screen and (max-width: 768px) {
     display: grid;
@@ -23,9 +25,13 @@
 }
 
 .textFieldMobile {
-  top: 120px; /* Ajusta la posición */
+  /*  position: absolute;
+  top: 90px; 
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+  position: relative;
+  top: 90px;
+  margin: 0 auto;
   width: 78vw !important;
   max-width: 400px;
   z-index: 20;
@@ -34,13 +40,10 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-
 .listItem {
   cursor: pointer;
   border-bottom: 1px solid rgb(205, 205, 206);
   padding: 10px 20px;
-  
- 
 }
 
 .listItem:last-child {
