--- a/src/components/InputSearch/InputSearch.css
+++ b/src/components/InputSearch/InputSearch.css
@@ -1,15 +1,16 @@
-.MuiAutocomplete-hasPopupIcon.css-w7gont-MuiAutocomplete-root
-  .MuiOutlinedInput-root,
-.MuiAutocomplete-hasClearIcon.css-w7gont-MuiAutocomplete-root
-  .MuiOutlinedInput-root {
+
+.MuiAutocomplete-hasPopupIcon.css-uou01n-MuiAutocomplete-root .MuiOutlinedInput-root, .MuiAutocomplete-hasClearIcon.css-uou01n-MuiAutocomplete-root .MuiOutlinedInput-root {
   padding-right: 10px !important;
 }
 
+.MuiAutocomplete-hasPopupIcon.css-qrwogd-MuiAutocomplete-root .MuiOutlinedInput-root, .MuiAutocomplete-hasClearIcon.css-qrwogd-MuiAutocomplete-root .MuiOutlinedInput-root {
+  padding-right: 10px !important;
+}
 .css-1cv3st9-MuiPaper-root-MuiAutocomplete-paper {
-  min-width: 330px !important ;
+
   border: 1px solid rgb(121, 121, 121);
   margin-top: 5px;
-}
+} 
 
 .container-input-search {
   position: relative;
@@ -22,21 +23,7 @@
   gap: 10px;
 }
 
-.textFieldMobile {
-  /*  position: absolute;
-  top: 90px; 
-  left: 50%;
-  transform: translate(-50%, -50%); */
-  position: relative;
-  top: 90px;
-  margin: 0 auto;
-  width: 78vw !important;
-  max-width: 400px;
-  z-index: 20;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-}
+
 
 .listItem {
   cursor: pointer;
@@ -53,3 +40,30 @@
   justify-content: space-between;
   gap: 20px;
 }
+
+
+
+
+
+
+
+
+.search-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Fondo oscuro translúcido */
+  z-index: 10; /* Se coloca detrás del Autocomplete */
+}
+
+.container-input-search {
+  position: relative;
+  z-index: 20; /* Se coloca encima del fondo oscuro */
+
+}
+
+
+
+
