--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -1,7 +1,7 @@
 .container-cart-item {
   max-width: 100% !important;
 
-   padding: 0 20px;
+  padding: 0 20px;
 
   .detele-item-cart {
     display: flex;
@@ -10,23 +10,24 @@
   }
 
 
-  
+
+
+
+
+
+  .image-cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .container-carrousell {
     width: 100%;
     max-width: 180px;
     max-height: 130px;
-    border: 2px solid rgb(229, 255, 0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    .carrousell {
-      border: 2px solid red;
-      width: 90%;
-    }
+  
 
     .image-slick {
-      border: 2px solid blue;
       height: 130px;
       width: 100%;
       transition: transform 0.5s ease-in-out;
@@ -47,8 +48,6 @@
     }
   }
 
-
-
   .title-product {
     display: flex;
     justify-content: center;
@@ -59,10 +58,10 @@
 
   .container-amount {
     display: flex;
-    
+
     align-items: center;
-    justify-content: space-between;
-    gap: 20px;
+    justify-content: space-around;
+    gap: 10px;
 
     .amount-counter {
       display: flex;
@@ -83,12 +82,7 @@
       font-size: 18px;
       font-weight: bold;
     }
-    .pay-button {
-      color: white;
-      background-color: #000000;
-      width: 100%;
-      padding: 10px 30px;
-    }
+ 
   }
 
   .reset-cart {
