--- a/src/components/ProductsCard/ProductsCard.css
+++ b/src/components/ProductsCard/ProductsCard.css
@@ -1,24 +1,27 @@
 .container-products-card {
 
-padding: 20px 0;
+padding: 20px;
+border: 2px solid gray;
+border-radius: 10px;
+
 
   .container-carrousell {
     width: 100%;
     max-width: 89vw;
-    border: 2px solid rgb(229, 255, 0);
     display: flex;
     justify-content: center;
     align-items: center;
 
     .carrousell {
-      border: 2px solid red;
+ 
       width: 90%;
     }
 
     .image-slick {
-      border: 2px solid blue;
+ 
       height: 220px;
       width: 100%;
+      cursor: pointer;
       transition: transform 0.5s ease-in-out;
     }
 
@@ -40,16 +43,32 @@ padding: 20px 0;
     display: flex;
     justify-content: space-between;
     .container-price {
-      display: flex;
-      border: 2px solid red;
+     
+    
       gap: 10px;
       .old-price {
         text-decoration: line-through;
         color: gray;
+        
       }
       .price {
         color: black;
+        font-weight: bold;
+        font-size: 20px;
       }
     }
   }
+  .brands-container {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    
+  }
+  
+
+
 }
