--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,7 @@
 .title-home {
   font-size: 30px;
   font-weight: bold;
+  text-align: center;
 }
 
 .image-banner {
@@ -10,7 +11,6 @@
 .container-card {
   display: flex;
   justify-content: space-around;
-  border: 2px solid rgb(23, 223, 73);
   cursor: pointer;
 
 }
@@ -21,7 +21,6 @@
     width: 100%;
     height: 320px;
     text-align: center;
-    border: 2px solid rgb(255, 217, 0);
     border-radius: 15px;
     background-size: 100% 100%;  /* Tamaño inicial */
     background-position: center;
