--- a/src/components/DetailProduct/DetailProduct.css
+++ b/src/components/DetailProduct/DetailProduct.css
@@ -1,4 +1,11 @@
+.toast-container {
+  max-width: 90%; /* Ajusta el ancho */
+  left: 5% !important; /* Centrarlo */
+}
+
 .container-products-detail {
+ padding: 0 25px  !important;
+
   .container-carrousell {
     width: 100%;
     max-width: 92vw;
@@ -11,7 +18,7 @@
     }
 
     .image-slick {
-      max-height: 45vh;
+      height: 220px;
       width: 100%;
       transition: transform 0.5s ease-in-out;
     }
@@ -36,7 +43,6 @@
     justify-content: space-between;
     .container-price {
       display: flex;
-    
 
       gap: 10px;
       .old-price {
@@ -66,7 +72,5 @@
         cursor: pointer;
       }
     }
-
-  
   }
 }
